--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,12 @@
     <string name="fake_this_app">.Fake This App!</string>
     <string name="activity_history_label">History</string>
     <string name="btn_test">TEST</string>
-    <string name="toast_fake_this">Choose \".Fake This App!\" option.</string>
+    <string name="toast_choose_fake">Choose \".Fake This App!\" option.</string>
     <string name="toast_working">It\'s working perfect!</string>
     <string name="toast_copied"> - Copied to clipboard.</string>
     <string name="toast_err_link">Error! Invalid Play store link.</string>
     <string name="toast_err_change_pkgname">Error! Cannot change the package name. Try clearing the app data in Settings.</string>
     <string name="toast_err_create_app">Error! Cannot create a new app. Try clearing the app data in Settings.</string>
-    <string name="toast_first_run">First run - Checking necessary files!</string>
     <string name="toast_err_copy_assets">Error! Cannot copy assets file.</string>
     <string name="toast_err_launch">Error! Cannot launch</string>
     <string name="toast_empty_history">Empty History!</string>
@@ -26,7 +25,9 @@
     <string name="dialog_title_sure">Are you sure?</string>
     <string name="dialog_title_create_new">Create new app</string>
     <string name="hint_package_name">Package name</string>
-    <string name="dialog_msg_create_new">If app name is left empty, the app name will be package name.</string>
-    <string name="toast_err_empty_pkg_name">Package name cannot be empty!</string>
+    <string name="til_err_empty_pkg_name">Package name cannot be empty!</string>
     <string name="hint_app_name">App Name</string>
+    <string name="til_err_invalid_pkg_name">Package name must contains at least a dot (.)</string>
+    <string name="toast_err_writable">Error! Storage is not writable. Please allow read/write permission.</string>
+    <string name="toast_err_root_access">Error! Cannot get root access.</string>
 </resources>
