--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="btn_test">TEST</string>
     <string name="toast_choose_fake">Choose \".Fake This App!\" option.</string>
     <string name="toast_working">It\'s working perfect!</string>
-    <string name="toast_copied"> - Copied to clipboard.</string>
+    <string name="toast_copied">\u0020- Copied to clipboard.</string>
     <string name="toast_err_link">Error! Invalid Play store link.</string>
     <string name="toast_err_change_pkgname">Error! Cannot change the package name. Try clearing the app data in Settings.</string>
     <string name="toast_err_create_app">Error! Cannot create a new app. Try clearing the app data in Settings.</string>
@@ -19,7 +19,7 @@
     <string name="menu_copy">Copy</string>
     <string name="menu_remove">Remove</string>
     <string name="menu_playstore">Play Store</string>
-    <string name="alert_msg_uninstall">You want to uninstall this app.</string>
+    <string name="dialog_delete_msg">You want to uninstall this app.</string>
     <string name="contentDes_uninstall">Uninstall this app</string>
     <string name="contentDes_more">Show popup menu</string>
     <string name="dialog_title_sure">Are you sure?</string>
@@ -30,4 +30,11 @@
     <string name="til_err_invalid_pkg_name">Package name must contains at least a dot (.)</string>
     <string name="toast_err_writable">Error! Storage is not writable. Please allow read/write permission.</string>
     <string name="toast_err_root_access">Error! Cannot get root access.</string>
+    <string name="text_today">Today</string>
+    <string name="text_day_ago">\u0020day ago</string>
+    <string name="text_days_ago">\u0020days ago</string>
+    <string name="tab_history">History</string>
+    <string name="tab_settings">Settings</string>
+    <string name="menu_about">About</string>
+    <string name="menu_exit">Exit</string>
 </resources>
